--- a/public/style.css
+++ b/public/style.css
@@ -7,9 +7,22 @@
    flex-direction: column;
 }
 
-.search-box {
-	display: flex;
-   justify-content: left;
-	align-items: left;
+input[type="text"]{
+   display: block;
+   margin: 40px auto 0 auto;
+   padding: 10px 20px;
+   max-width: 600px;
+   width: 95%;
+}
+
+#searchResoult{
+   max-width: 600px;
+   width: 95%;
+   margin: 20px auto 0 auto;
+}
+
+hr{
+   border-top: none;
+   border: 1px solid lightgrey;
 }
 
